# modei-sdk

python/: README.md  pyproject.toml
python/src/modei/: __init__.py  _http.py  async_client.py  client.py  realtime.py
python/src/modei/passport/: _subset.py  delegation.py  envelope.py  issuer.py  verifier.py
python/src/modus/: _http.py  async_client.py  client.py
python/tests/: conftest.py  test_async_client.py  test_sync_client.py
python/tests/passport/: test_delegation.py
typescript/: .gitignore  CHANGELOG.md  README.md  eslint.config.js  package.json  tsup.config.ts
typescript/__tests__/: agentId.test.ts  delegation.test.ts  envelope.test.ts  tier.test.ts
typescript/scripts/: inspect-pack.sh  smoke-test.sh  workflow.cjs  workflow.mjs
typescript/src/: index.ts  realtime.ts
typescript/src/passport/: agentId.ts  delegation.ts  envelope.ts  tier.ts
typescript/tests/: tools.test.ts
